Basic scaffolding for opt-in microservice
