# api/rhsm-subscriptions-api-spec.yaml
@@ -42,117 +42,7 @@ paths:
                 $ref: "#/components/schemas/VersionInfo"
         '500':
           $ref: '#/components/responses/InternalServerError'
-  /opt-in:
-    description: "Endpoint for opting into subscription watch."
-    get:
-      summary: "Get the opt-in configuration for the current account."
-      operationId: getOptInConfig
-      responses:
-        '200':
-          description: "The request for the account's opt-in configuration was successful."
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: "#/components/schemas/OptInConfig"
-              example:
-                data:
-                  opt_in_complete: true
-                  account:
-                    account_number: 12345
-                    tally_sync_enabled: true
-                    tally_reporting_enabled: true
-                    opt_in_type: 'API'
-                    created: '2017-08-04T17:32:05Z'
-                    last_updated: '2017-08-04T17:32:05Z'
-                  org:
-                    org_id: 1111
-                    conduit_sync_enabled: true
-                    opt_in_type: 'API'
-                    created: '2017-08-04T17:32:05Z'
-                    last_updated: '2017-08-04T17:32:05Z'
-                meta:
-                  account_number: 12345
-                  org_id: 1111
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          $ref: '#/components/responses/ResourceNotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-    put:
-      summary: "Create/Update an account's opt-in configuration. Account and Org ID are defined by the
-                identity header. If no parameters are specified, all everything will be enabled."
-      operationId: putOptInConfig
-      parameters:
-        - name: enable_tally_sync
-          in: query
-          required: false
-          schema:
-            type: boolean
-            default: true
-        - name: enable_tally_reporting
-          in: query
-          required: false
-          schema:
-            type: boolean
-            default: true
-        - name: enable_conduit_sync
-          in: query
-          required: false
-          schema:
-            type: boolean
-            default: true
-      responses:
-        '200':
-          description: "The request for the account's opt-in configuration was successful."
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: "#/components/schemas/OptInConfig"
-              example:
-                data:
-                  opt_in_complete: true
-                  account:
-                    account_number: 12345
-                    tally_sync_enabled: true
-                    tally_reporting_enabled: true
-                    opt_in_type: 'API'
-                    created: '2017-08-04T17:32:05Z'
-                    last_updated: '2017-08-04T17:32:05Z'
-                  org:
-                    org_id: 1111
-                    conduit_sync_enabled: true
-                    opt_in_type: 'API'
-                    created: '2017-08-04T17:32:05Z'
-                    last_updated: '2017-08-04T17:32:05Z'
-                meta:
-                  account_number: 12345
-                  org_id: 1111
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          $ref: '#/components/responses/ResourceNotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
-    delete:
-      summary: "Delete an opt-in config for the associated account/org. The account number and org ID are
-                pulled from the identity header."
-      operationId: deleteOptInConfig
-      responses:
-        '204':
-          description: "Successfully deleted the opt-in configuration for the accociated account/org"
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          $ref: '#/components/responses/ResourceNotFound'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
+
 
   /tally/products/{product_id}:
     description: "Operations for a tally report of a specific account and product."
